--- a/src/styles/pages/_blog.scss
+++ b/src/styles/pages/_blog.scss
@@ -108,6 +108,7 @@
     &-categories {
       display: flex;
       p {
+        text-transform: uppercase;
         font-size: 14px;
         font-weight: 500;
         color: #212529;
@@ -130,10 +131,22 @@
         margin: 0;
         font-weight: 600;
       }
+
+      @media only screen and (max-width: 600px) {
+        h2 {
+          font-size: 2.75rem;
+        }
+      }
     }
     &-excerpt {
       font-size: 14px;
       color: #212529;
     }
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .blog-image-plane {
+      display: none;
   }
 }
